--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [versioneer]
 VCS=git
 style=pep440
-versionfile_source = q2_covid_19/_version.py
-versionfile_build = q2_covid_19/_version.py
+versionfile_source = q2_covid/_version.py
+versionfile_build = q2_covid/_version.py
 tag_prefix =
-parentdir_prefix = q2-covid-19-
+parentdir_prefix = q2-covid-
