--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -3,7 +3,7 @@
 {% set release = '.'.join(version.split('.')[:2]) %}
 
 package:
-  name: q2-covid
+  name: q2-genome-sampler
   version: {{ version }}
 
 source:
@@ -26,10 +26,10 @@ requirements:
 
 test:
   imports:
-    - q2_covid
-    - qiime2.plugins.covid
+    - q2_genome_sampler
+    - qiime2.plugins.genome_sampler
 
 about:
-  home: https://github.com/caporaso-lab/q2-covid
+  home: https://github.com/caporaso-lab/q2-genome-sampler
   license: BSD-3-Clause
   license_family: BSD
