--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [versioneer]
 VCS=git
 style=pep440
-versionfile_source = q2_covid/_version.py
-versionfile_build = q2_covid/_version.py
+versionfile_source = genome_sampler/_version.py
+versionfile_build = genome_sampler/_version.py
 tag_prefix =
-parentdir_prefix = q2-covid-
+parentdir_prefix = genome-sampler-
