--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - pandas
     - qiime2 {{ release }}.*
     - q2-types {{ release }}.*
+    - q2templates {{ release }}.*
 
 test:
   imports:
