DOC: split docs into multiple pages

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,1 +1,11 @@
-file: tutorial
+- file: intro
+
+- part: Getting started
+  chapters:
+  - file: install
+  - file: tutorial
+
+- part: Next steps
+  chapters:
+  - file: downstream-workflows
+  - file: other
