--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
       - name: fetch genome-sampler conda package
         uses: actions/download-artifact@v2
         with:
-          name: $QIIME2_PLATFORM-64
+          name: {{ env.QIIME2_PLATFORM }}-64
 
       - name: debug (delete me)
         run: ls -lahR
