--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,6 +104,7 @@ jobs:
 
       - name: rewire channels
         run: |
+          source "$CONDA/etc/profile.d/conda.sh"
           sudo conda install -q -y -c conda-forge jq yq
           yq ". | {channels: [\
             \"https://packages.qiime2.org/qiime2/unverified\", \
