--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,7 +105,8 @@ jobs:
       - name: rewire channels
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
-          sudo conda install -q -y -c conda-forge jq yq
+          conda activate base
+          conda install -q -y -c conda-forge jq yq
           conda run yq ". | {channels: [\
             \"https://packages.qiime2.org/qiime2/unverified\", \
             \"qiime2\", \
